Fixed layout on iOS devices.

--- a/src/styles/MobileAccountSetup.css
+++ b/src/styles/MobileAccountSetup.css
@@ -3,7 +3,7 @@
 
     top: 50%;
     left: 50%;
-    gap: 20px;
+    grid-gap: 20px;
 
     transform: translate(-50%, -50%);
 
