--- a/src/styles/MobileNavigationBar.css
+++ b/src/styles/MobileNavigationBar.css
@@ -3,7 +3,7 @@
     height: 60px;
 
     left: 0;
-    top: calc(100vh - 60px);
+    top: calc(100% - 60px);
 
     background-color: var(--light-charade);
     color: var(--white);
@@ -13,7 +13,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 15%;
+    grid-gap: 15%;
 }
 
 .icon30 {
