--- a/src/styles/MobileNewPost.css
+++ b/src/styles/MobileNewPost.css
@@ -68,7 +68,7 @@
 }
 
 .MobileNewPost__Images {
-    gap: 20px;
+    grid-gap: 20px;
 
     display: flex;
     flex-direction: row;
