--- a/src/styles/MobilePost.css
+++ b/src/styles/MobilePost.css
@@ -100,7 +100,7 @@
 
     bottom: 0;
     padding: 15px 20px;
-    gap: 20px;
+    grid-gap: 20px;
 
     background-color: rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(10px);
@@ -113,7 +113,7 @@
 
 .icon25 {
     margin: 0;
-    gap: 5px;
+    grid-gap: 5px;
 
     color: #fff;
     display: flex;
@@ -156,7 +156,7 @@
 
     color: var(--shamrock);
 
-    gap: 10px;
+    grid-gap: 10px;
     font-size: var(--font-10);
 
     display: flex;
