--- a/src/styles/MobileProfileStats.css
+++ b/src/styles/MobileProfileStats.css
@@ -3,7 +3,7 @@
 
     margin: 80px 0 0 0;
     border-radius: 10px;
-    gap: calc(100% / 3 - 100px);
+    grid-gap: calc(100% / 3 - 100px);
 
     border: 2px solid var(--light-charade);
     color: var(--white);
